--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -45,6 +46,7 @@ dependencies {
     implementation 'com.google.mlkit:translate:16.1.2'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.camera:camera-camera2:1.1.0-alpha06'
+    implementation 'androidx.biometric:biometric:1.2.0-alpha03'
     implementation 'androidx.wear:wear:1.1.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -52,6 +54,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
