--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,12 @@ android {
 
 dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.3.0'
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.mlkit:translate:16.1.2'
+    implementation 'com.google.code.gson:gson:2.8.7'
+
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.camera:camera-camera2:1.1.0-alpha06'
     implementation 'androidx.biometric:biometric:1.2.0-alpha03'
@@ -56,6 +57,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
+    implementation platform('com.google.firebase:firebase-bom:28.2.1')
+    implementation 'com.google.firebase:firebase-database:20.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
