--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.mlkit:translate:16.1.2'
     implementation 'com.google.code.gson:gson:2.8.7'
-
+    implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.camera:camera-camera2:1.1.0-alpha06'
     implementation 'androidx.biometric:biometric:1.2.0-alpha03'
