--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'com.google.mlkit:object-detection:16.2.6'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.mlkit:translate:16.1.2'
     implementation 'com.google.code.gson:gson:2.8.7'
